--- a/src/files/application/Espo/Modules/DubasUuidField/Resources/i18n/en_US/Admin.json
+++ b/src/files/application/Espo/Modules/DubasUuidField/Resources/i18n/en_US/Admin.json
@@ -1,8 +1,14 @@
 {
+    "labels": {
+        "UUIDs": "UUIDs"
+    },
     "fields": {
         "uuidVersion": "UUID Version"
     },
     "fieldTypes": {
         "uuid": "UUID"
+    },
+    "descriptions": {
+        "uuidManager": "All UUIDs stored in the system."
     }
 }
